--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "laraveles/spanish": "^1.4",
         "tcg/voyager": "^1.3"
     },
     "require-dev": {
