--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "datatables.net": "^1.10.20",
         "datatables.net-dt": "^1.10.20",
         "flickity": "^2.2.1",
+        "gijgo": "^1.9.13",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
@@ -26,6 +27,7 @@
         "react-dom": "^16.2.0",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
-        "sass-loader": "^7.1.0"
+        "sass-loader": "^7.1.0",
+        "sweetalert2": "^9.5.4"
     }
 }
